--- a/Pong.API/appsettings.json
+++ b/Pong.API/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "HubUrl": "http://localhost:5000/pongHub"
 }
