--- a/MauiPong/Pong.csproj
+++ b/MauiPong/Pong.csproj
@@ -14,7 +14,7 @@
         <!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
 
         <OutputType>Exe</OutputType>
-        <RootNamespace>MauiPong</RootNamespace>
+        <RootNamespace>Pong</RootNamespace>
         <UseMaui>true</UseMaui>
         <SingleProject>true</SingleProject>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -22,10 +22,10 @@
         <Nullable>enable</Nullable>
 
         <!-- Display name -->
-        <ApplicationTitle>MauiPong</ApplicationTitle>
+        <ApplicationTitle>Pong</ApplicationTitle>
 
         <!-- App Identifier -->
-        <ApplicationId>com.companyname.mauipong</ApplicationId>
+        <ApplicationId>com.companyname.pong</ApplicationId>
 
         <!-- Versions -->
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -62,7 +62,6 @@
         <PackageReference Include="Fluxor.Blazor.Web" Version="6.0.0" />
         <PackageReference Include="Fluxor.Blazor.Web.ReduxDevTools" Version="6.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.6" />
-        <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="8.0.6" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
@@ -70,8 +69,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DataModels\Common.csproj" />
-      <ProjectReference Include="..\PongClassLibrary\PongClassLibrary.csproj" />
+      <ProjectReference Include="..\Common\Common.csproj" />
     </ItemGroup>
+
 
 </Project>
