--- a/MauiPong/Pong.csproj
+++ b/MauiPong/Pong.csproj
@@ -12,7 +12,7 @@
             The Mac App Store will NOT accept apps with ONLY maccatalyst-arm64 indicated;
             either BOTH runtimes must be indicated or ONLY macatalyst-x64. -->
         <!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
-
+ 
         <OutputType>Exe</OutputType>
         <RootNamespace>Pong</RootNamespace>
         <UseMaui>true</UseMaui>
@@ -55,6 +55,15 @@
 
         <!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
         <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <AndroidResource Remove="Pong\**" />
+      <Compile Remove="Pong\**" />
+      <Content Remove="Pong\**" />
+      <EmbeddedResource Remove="Pong\**" />
+      <MauiXaml Remove="Pong\**" />
+      <None Remove="Pong\**" />
     </ItemGroup>
 
     <ItemGroup>
